# krondor-rs

./: .env.config  .env.dev  .gitignore  Cargo.toml  README.md  app.config  build.rs  index.html  input.css  krondor.json  package.json  tailwind.config.js
.github/public/: manifest.json
.github/public/items/: not-quite-a-tool.md  petting_turtles.md  v1.0.0.md  wasm-life-rs.html
.github/public/posts/: istanbul.md  scorpio.md  v0.0.0.md  v1.0.0.md  wasm-life-rs.html
contracts/: README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/artifacts/contracts/rootCid.sol/: RootCid.dbg.json  RootCid.json
contracts/contracts/: rootCid.sol
contracts/scripts/: deploy.ts
contracts/test/: rootCid.ts
crates/common/: Cargo.toml
crates/common/src/: eth.rs  ipfs.rs  lib.rs
crates/common/tests/: eth.rs  ipfs.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  error.rs  main.rs
e2e/: package.json
e2e/playwright-report/: index.html
e2e/tests/: index.spec.ts
public/: index.html  krondor-1e2301c40ebb9a76.js  krondor-1e2301c40ebb9a76_bg.wasm  krondor-201cfac738b05450.js  krondor-201cfac738b05450_bg.wasm  krondor-22a952586bd0d7e1.js  krondor-22a952586bd0d7e1_bg.wasm  krondor-cf97669140362eed.js  krondor-cf97669140362eed_bg.wasm  krondor-dda87c08f48a41d5.js  krondor-dda87c08f48a41d5_bg.wasm  manifest.json
public/collections/posts/: my-first-post.md
public/data/: manifest.json
public/metadata/: history.json  manifest.json
public/posts/: my-first-post  my-first-post.md
redirect/: .gitignore  README.md  next.config.js  package.json  tsconfig.json
redirect/components/layouts/primary/: PrimaryLayout.tsx
redirect/lib/: config.ts  eth.js
redirect/pages/: _app.tsx  index.tsx
redirect/pages/api/: rootCid.ts
redirect/styles/: App.module.css  Variables.module.css  globals.css
redirect/styles/pages/: Index.module.css
src/: cli.rs  common.rs  config.rs  env.rs  error.rs  eth.rs  ipfs.rs  lib.rs  main.rs  types.rs  web.rs
src/cli/: app.rs  args.rs  fs.rs  mod.rs
src/types/: cid.rs  data.rs  item.rs  manifest.rs
src/utils/: fs.rs  mod.rs  web.rs
src/web/: app.rs  index.rs  mod.rs  render.rs  utils.rs
src/web/components/: internal_link.rs  item_table.rs  mod.rs
src/web/pages/: about.rs  index.rs  item.rs  items.rs  mod.rs
style/: output.css
tests/: eth.rs  ipfs.rs
