[package]
name = "krondor"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version =  "2.0.10", features = ["rustls"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.20", features = ["multipart", "stream", "json"] }
url = "2.4.1"
leptos = { version = "^0.5", features = ["csr", "nightly"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
leptos-struct-table = "^0.4"
serde = "1.0.188"
async-trait = "0.1.73"
cid = "0.10.1"
leptos_router = { version = "^0.5", features = ["csr", "nightly"] }
pulldown-cmark = "0.9.3"
clap = { version = "^4", features = ["derive"] }
web-sys = "0.3.64"
chrono = { version = "0.4.31", features = ["serde"] }
multihash = "=0.18"
sha3 = "0.10.8"
bytes = "1.5.0"
lazy_static = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32.0", features = ["macros", "full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[build-dependencies]
dotenv = "0.15.0"
