[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers = { version =  "2.0.10", features = ["rustls"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.20", features = ["multipart", "stream", "json"] }
serde = "1.0.188"
serde_json = "1.0.106"
url = "2.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32.0", features = ["macros", "full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
